<resources>
    <string name="app_name">NavigationComponent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello First Fragment</string>
    <string name="hello_second_fragment">Hello Second Fragment</string>
    <string name="hello_third_fragment">Hello Third Fragment</string>
    <string name="goto_second">Goto Second</string>
    <string name="goto_third">Goto Third</string>
    <string name="goto_first">Goto First</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="image">Image</string>
</resources>