<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".fragments.FirstFragment">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/hello_first_fragment" />
    <Button
        android:id="@+id/GoToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:text="@string/goto_second"/>
    <Button
        android:id="@+id/GoToThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GoToSecond"
        android:text="@string/goto_third"/>
</RelativeLayout>